--- a/index.css
+++ b/index.css
@@ -1,23 +1,66 @@
+html {
+	font-family: sans-serif;
+}
 ul {
+	display: block;
+	float: right;
     list-style-type: none;
-    margin: 0;
     padding: 0;
+    margin: 0;
+    margin-right: 1.5em;
 }
 
 li {
-   	text-align: right ;
-    display: inline;
+
+	color: #595959;
+	font-size: .8em;
+	margin: 10px;
+	margin-top: 20px;
+    display: inline; 
     color: ;
 }
 
-body img {
-	display: block;
-	margin-left: auto;
-	margin-right: auto
+.img-circle
+{
+	border-radius: 60%;
 }
 
-body div form {
+a { 
+	color: #595959;
+	text-decoration:none;:
+}
+
+a:hover { 
+	text-decoration:underline;:
+}
+
+body div img {
 	display: block;
-	margin-left: 10em;
-	margin-right: auto
+	margin-left: auto;
+	margin-right: auto;
+	width: 300px;
+}
+
+input {
+	margin: 0 auto;
+}
+
+
+input[type="text"] {
+	display: block;
+	margin-top: 10px;
+	width: 525px;
+	height: 36px;
+}
+
+#buttons {
+	display:block;
+	width: 300px;
+	margin: 10px auto;
+}
+
+input[type="submit"] {
+	display: block-inline;
+	width: 135px;
+	height: 36px;
 }
