--- a/index.css
+++ b/index.css
@@ -1,17 +1,26 @@
 html {
 	font-family: sans-serif;
 }
-ul {
-	display: block;
+
+
+.listRight {
+	display: absolute;
 	float: right;
+}
+
+ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
     margin-right: 1.5em;
 }
 
-li {
+#footerLeft {
+	float: left;
+}
 
+
+li {
 	color: #595959;
 	font-size: .8em;
 	margin: 10px;
@@ -63,4 +72,10 @@ input[type="submit"] {
 	display: block-inline;
 	width: 135px;
 	height: 36px;
+}
+
+#footer {
+	min-height: 1.5em;
+	background: #f2f2f2;
+	font-size: 1.5em;
 }
